<resources>
    <string name="app_name">MobileP1</string>
    <string name="TeamB">Team B</string>
    <string name="TeamA">Team A</string>
    <string name="three1_button">+3 Points</string>
    <string name="two1_button">+2 Points</string>
    <string name="free1_button">Free Throw</string>
    <string name="three2_button">+3 Points</string>
    <string name="two2_button">+2 Points</string>
    <string name="free2_button">Free Throw</string>
    <string name="reset_button">Reset</string>
    <string name="three1L_button">+3 Points</string>
    <string name="two1L_button">+2 Points</string>
    <string name="free1L_button">Free Throw</string>
    <string name="three2L_button">+3 Points</string>
    <string name="two2L_button">+2 Points</string>
    <string name="free2L_button">Free Throw</string>
    <string name="resetL_button">Reset</string>
</resources>